work1/cron_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cron-service
  labels:
    app: cron-service
spec:
  selector:
    app: cron-service
  #type: NodePort
  ports:
    - name: cron-service-port
      port: 8081
      targetPort: 8081
